--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NavigationApp",
+  "name": "navigation-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,13 +12,16 @@
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/drawer": "^7.5.5",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/stack": "^7.4.4",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1"
+    "react-native-screens": "^4.13.1",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
