--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.4",
     "@react-navigation/drawer": "^7.5.5",
+    "@react-navigation/material-top-tabs": "^7.3.4",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/stack": "^7.4.4",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-pager-view": "^6.8.1",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
