--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
@@ -45,6 +46,9 @@
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
+  },
+  "reactNativeVectorIcons": {
+    "fontDir": "src/rnvi-fonts"
   },
   "engines": {
     "node": ">=18"
